--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -26,6 +26,9 @@ TYPO3:
 Ecom:
   Terminal:
     version: '1.1.0rc'
+    uploads:
+      image:
+        formats: 'image/gif, image/jpeg, image/png'
     timeout: 180000
     participants:
       salutations:
